--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
-    background-color: #e8aea9;
+    background-color: #222222;
+    font-family: Verdana, sans-serif;
+    color: #dddddd;
  }
 
- body {
-   font-family: Verdana, sans-serif;
- }
+h1{
+    text-align: center;
+}
 
  /* Center align the dropdown menu horizontally */
 .dropdown {
@@ -15,7 +17,7 @@ body {
 
 /* Style the dropdown button */
 .dropbtn {
-  background-color: #4CAF50;
+  background-color: #60f;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -35,7 +37,7 @@ body {
 
 /* Style the links inside the dropdown */
 .dropdown-content a {
-  color: black;
+  color: #dddddd;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -43,7 +45,7 @@ body {
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #f1f1f1;
+  background-color: #111111;
 }
 
 /* Show the dropdown menu on hover */
