--- a/style.css
+++ b/style.css
@@ -1,54 +1,13 @@
 body {
-    background-color: #222222;
-    font-family: Verdana, sans-serif;
-    color: #dddddd;
- }
-
-h1{
-    text-align: center;
-}
-
- /* Center align the dropdown menu horizontally */
-.dropdown {
-  text-align: center;
-  position: relative;
-  z-index: 1;
-}
-
-/* Style the dropdown button */
-.dropbtn {
-  background-color: #60f;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Style the dropdown content (hidden by default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  z-index: 2;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-}
-
-/* Style the links inside the dropdown */
-.dropdown-content a {
+  background-color: #222222;
+  font-family: Verdana, sans-serif;
   color: #dddddd;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #111111;
+h1 {
+  text-align: left;
 }
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
+header {
+  flex: auto;
 }
