--- a/style.css
+++ b/style.css
@@ -4,10 +4,37 @@ body {
   color: #dddddd;
 }
 
-h1 {
-  text-align: left;
+#list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 0;
 }
 
-header {
-  flex: auto;
+li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  border: #fff;
+  background-color: #111;
+  border-radius: 10px;
+}
+
+ul li div {
+  border: 2px solid #fff;
+  background-color: #111;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+ul li div img {
+
+  max-width: 450px;
+  width: 450px;
+  max-height: 50px;
+  height: auto;
+  border-radius: 10px;
+  object-fit: cover;
 }
